Update de Consultas Digitales para dejar listo

--- a/lib/frontend/header/styles.styl
+++ b/lib/frontend/header/styles.styl
@@ -138,20 +138,20 @@
 
     img
       height: 48px
-      max-width: 100%
+      // max-width: 100%
       margin-left: -10px
 
     @media (min-width: 380px)
-      margin-top: 6px
+      margin-top: 10px
 
       img
-        height: 60px
+        height: 50px
 
     @media (min-width: 480px)
-      margin-top: 3px
+      margin-top: 10px
 
       img
-        height: 65px
+        height: 50px
 
   .dropdown-list
     position: absolute
