--- a/lib/frontend/layout/index.jade
+++ b/lib/frontend/layout/index.jade
@@ -19,8 +19,8 @@ html(lang=locale)
 
     //- HTML5 shim, for IE6-8 support of HTML5 elements
     script(src='https://cdn.polyfill.io/v1/polyfill.min.js')
-
     link(rel='icon', type='image/x-icon', href=config.favicon)
+    script(src='https://cdn.rawgit.com/progers/pathseg/master/pathseg.js')
     
     
     //-
