--- a/lib/frontend/site/home-multiforum/search/styles.styl
+++ b/lib/frontend/site/home-multiforum/search/styles.styl
@@ -9,18 +9,25 @@
   input
     width:60%
     max-width: 355px
-    height:40px
+    height:37px
     margin-bottom:5px
     outline: 0
+    border: 1px solid #CACACA;
+    height: 37px;
+    margin-top: 1px;
+    padding: 0px 5px;
     &:hover
       outline: 0
   button
     width:10%
     min-width: 65px
-    height:40px
+    height:37px
     background:$primary-color
     color: #fff
     border: 0
+    border-radius: 4px;
+    margin-top: 1px;
+    margin-left: 2px;
 
 .advancedsearch
   padding:20px
