--- a/ext/lib/layout/styles.styl
+++ b/ext/lib/layout/styles.styl
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Noto+Serif:100,400,700&subset=latin-ext')
 
 body
-  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif
+  font-family: 'Lato', BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
   overflow: auto
 
 #root
