--- a/lib/boot/global.styl
+++ b/lib/boot/global.styl
@@ -1,18 +1,19 @@
 @import 'ext/node_modules/argob-poncho/dist/css/poncho.css'
 
 // colores principales de textos y otras cositas
-$main-color = #A695d6
+$main-color = #975696
 $main-color-resalted = #7868a6
 // colores de links o textos tipo links
 $main-link-color = #1fac92
 $main-link-color-hover = #257b6c
 // otros colores de bootstrap
-$primary-color = #A69546
-$primary-color-hover = #e3cc5f
+$primary-color = #975696
+$primary-color-hover = #ca96c9
 $success-color = #50d021
 $success-color-hover = #65e635
 $danger-color = #e16a3c
 $danger-color-hover = #ff9371
+
 
 // Stylus mixins (funciones): http://stylus-lang.com/docs/mixins.html
 // Para convertir fonts entre un formato y otro: https://onlinefontconverter.com/
