--- a/lib/frontend/layout/index.styl
+++ b/lib/frontend/layout/index.styl
@@ -9,14 +9,14 @@
 /* General
 -------------------------------------------------- */
 
-html
-  -webkit-font-smoothing antialiased
+// html
+  // -webkit-font-smoothing antialiased
 
 body
   color rgba(#000, .8)
   font-size 16px
-  line-height 1.4
-  font-family 'Open Sans', sans-serif
+  line-height 1.5
+  // font-family 'Sen', sans-serif
   cursor default
 
 h1,
