--- a/lib/frontend/site/home-multiforum/styles.styl
+++ b/lib/frontend/site/home-multiforum/styles.styl
@@ -66,8 +66,8 @@
     margin-top: 1.5em
     text-align: center
     font-size: 20px
-    padding-left: 5%;
-    padding-right: 5%;
+    padding-left: 15%;
+    padding-right: 15%;
     &.last
       color: $main-color
       font-weight:bold
@@ -75,11 +75,7 @@
       justify-content:center
 
     .bold {
-      font-weight: 400
-    }
-
-    .skyblue {
-      font-weight: 500;
+      font-weight: 700
     }
   .arrow
     text-align:center
@@ -130,8 +126,8 @@
 
     .btn-active
       text-underline: none
-      background-color: #e9e9e9
-      color: $main-color
+      background-color: $main-color
+      color: #FFF
       &:focus
         outline: none
 
@@ -172,3 +168,39 @@
 
 
 
+
+.particles-container
+  position: relative;
+  background: rgb(61,14,49);
+  background: linear-gradient(205deg, rgba(61,14,49,1) 0%, rgba(97,1,110,1) 100%);
+  // padding: 20px 10px;
+  height:100%;
+  max-height: 400px;
+  .latinamerica-logo
+    z-index: 200;
+    height: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%)
+    position: absolute;
+    @media screen and (max-width: 750px)
+      height: 70%;
+      left: 6%;
+      transform: translateY(-50%);
+
+  .decisiones-colectivas-logo
+    z-index: 250;
+    height: 50%;
+    top: 50%;
+    padding-right: 0;
+    left: 50%
+    transform: translate(-50%,-50%)
+    position: absolute;
+    width: auto;
+    @media screen and (max-width: 750px)
+      padding-left:30px;
+      max-width: 90%;
+  .particles-canvas-container
+    position: relative;
+    height: 400px;
+    max-height: 400px;
