--- a/lib/frontend/richtext/template.jade
+++ b/lib/frontend/richtext/template.jade
@@ -5,6 +5,7 @@
       - if (toolbar.fontFace)
       select.ql-font(title='Font')
         option(value='sans-serif', selected) Sans Serif
+        option(value='Lato', selected) Lato
         option(value='Georgia, serif') Serif
         option(value='Monaco, \'Courier New\', monospace') Monospace
 
